; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_initsplan.c_build_base_rel_tlists.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_initsplan.c_build_base_rel_tlists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32* }

@PVC_RECURSE_AGGREGATES = common dso_local global i32 0, align 4
@PVC_RECURSE_WINDOWFUNCS = common dso_local global i32 0, align 4
@PVC_INCLUDE_PLACEHOLDERS = common dso_local global i32 0, align 4
@NIL = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @build_base_rel_tlists(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @PVC_RECURSE_AGGREGATES, align 4
  %9 = load i32, i32* @PVC_RECURSE_WINDOWFUNCS, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @PVC_INCLUDE_PLACEHOLDERS, align 4
  %12 = or i32 %10, %11
  %13 = call i32* @pull_var_clause(i32* %7, i32 %12)
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** @NIL, align 8
  %16 = icmp ne i32* %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %2
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @bms_make_singleton(i32 0)
  %21 = call i32 @add_vars_to_targetlist(%struct.TYPE_6__* %18, i32* %19, i32 %20, i32 1)
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @list_free(i32* %22)
  br label %24

24:                                               ; preds = %17, %2
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %52

31:                                               ; preds = %24
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = load i32*, i32** %35, align 8
  %37 = load i32, i32* @PVC_RECURSE_AGGREGATES, align 4
  %38 = load i32, i32* @PVC_INCLUDE_PLACEHOLDERS, align 4
  %39 = or i32 %37, %38
  %40 = call i32* @pull_var_clause(i32* %36, i32 %39)
  store i32* %40, i32** %6, align 8
  %41 = load i32*, i32** %6, align 8
  %42 = load i32*, i32** @NIL, align 8
  %43 = icmp ne i32* %41, %42
  br i1 %43, label %44, label %51

44:                                               ; preds = %31
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %46 = load i32*, i32** %6, align 8
  %47 = call i32 @bms_make_singleton(i32 0)
  %48 = call i32 @add_vars_to_targetlist(%struct.TYPE_6__* %45, i32* %46, i32 %47, i32 1)
  %49 = load i32*, i32** %6, align 8
  %50 = call i32 @list_free(i32* %49)
  br label %51

51:                                               ; preds = %44, %31
  br label %52

52:                                               ; preds = %51, %24
  ret void
}

declare dso_local i32* @pull_var_clause(i32*, i32) #1

declare dso_local i32 @add_vars_to_targetlist(%struct.TYPE_6__*, i32*, i32, i32) #1

declare dso_local i32 @bms_make_singleton(i32) #1

declare dso_local i32 @list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
